adds js helper pages

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
             <div class="app">
-                    <h1>Recipes</h1>
+                    <h1>Add your favorite recipes</h1>
                       <section>
-                        <label for="recipe-input">Add to your todo list!</label>
+                        <label for="recipe-input">Add a link to a recipe</label>
                         <input class="recipe-input "type="text" name="recipe-input">
                         <label for="rating">Rating:</label>
                         <select class="rating" name="rating">
