starts print function

--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
                   </div>
         
         <script src="./main.js"></script>
+        <script src="./add-recipe.js"></script>
+        <script src="./remove-recipe.js"></script>
+        <script src="./print-recipe.js"></script>
+        <script src="./five-star-only.js"></script>
     </body>
 </html>
