can add to the list

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                   </div>
         
         <script src="./main.js"></script>
+        <script src="./recipes.js"></script>
         <script src="./add-recipe.js"></script>
         <script src="./remove-recipe.js"></script>
         <script src="./print-recipe.js"></script>
