adds image and text

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
                         <button class="clear-complete">Remove Recipe</button>
                         <button class="five-star">Five Star Recipes</button>
                       </section>
-                    <ol class="recipe-list"></ol>
+                    <ul class="recipe-list"></ul>
+                    <img id = 'image1' src='https://image.shutterstock.com/image-photo/beautiful-water-drop-on-dandelion-260nw-789676552.jpg'> </img>
                   </div>
         
         <script src="./main.js"></script>
         <script src="./recipes.js"></script>
         <script src="./add-recipe.js"></script>
+        <script src="./add-image.js"></script>
         <script src="./remove-recipe.js"></script>
         <script src="./print-recipe.js"></script>
         <script src="./five-star-only.js"></script>
