adds stock photos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <button class="clear-complete">Remove Recipe</button>
                         <button class="five-star">Five Star Recipes</button>
                       </section>
-                    <ul class="recipe-list"></ul>
+                    <ol class="recipe-list"></ol>
                     <img id = 'image1' src='https://image.shutterstock.com/image-photo/beautiful-water-drop-on-dandelion-260nw-789676552.jpg'> </img>
                   </div>
         
