attempt to add remove feature

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
                         <input class="image-input" type="text" name="image-input">
                         </select>
                         <button class="add-recipe">Add Recipe</button>
-                        <button class="clear-complete">Remove Recipe</button>
+                        <button class="remove-recipe">Remove Recipe</button>
                         <button class="five-star">Five Star Recipes</button>
                       </section>
-                    <ol class="recipe-list"></ol>
-                    <img id = 'image1' src='https://image.shutterstock.com/image-photo/beautiful-water-drop-on-dandelion-260nw-789676552.jpg'> </img>
+                    <ul class="recipe-list"></ul>
                   </div>
         
         <script src="./main.js"></script>
