some progress on remove

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                         <input class="image-input" type="text" name="image-input">
                         </select>
                         <button class="add-recipe">Add Recipe</button>
-                        <button class="remove-recipe">Remove Recipe</button>
-                        <button class="five-star">Five Star Recipes</button>
+                        <button class="remove-recipe">Remove Selected Recipe</button>
+                        <button class="remove-all">Remove All Recipes</button>
                       </section>
                     <ul class="recipe-list"></ul>
                   </div>
@@ -27,8 +27,10 @@
         <script src="./main.js"></script>
         <script src="./recipes.js"></script>
         <script src="./add-recipe.js"></script>
+        <script src="./refresh-recipes.js"></script>
         <script src="./add-image.js"></script>
         <script src="./remove-recipe.js"></script>
+        <script src="./remove-all.js"></script>
         <script src="./print-recipe.js"></script>
         <script src="./five-star-only.js"></script>
     </body>
