--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <script src="./remove-recipe.js"></script>
         <script src="./remove-all.js"></script>
         <script src="./print-recipe.js"></script>
-        <script src="./five-star-only.js"></script>
+        <script src="./cursor-fx.js"></script>
     </body>
 </html>
 © 2019 GitHub, Inc.
