adds footer and background color

--- a/index.html
+++ b/index.html
@@ -30,18 +30,6 @@
                             </div>
                             <input name="image-input" type="text" class="image-input form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                         </div>
-                        <!-- <div class="dropdown">
-                            <button class="btn btn-secondary btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Recipe Rating
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" >1 Star</a>
-                                <a class="dropdown-item" >2 Stars</a>
-                                <a class="dropdown-item" >3 Stars</a>
-                                <a class="dropdown-item" >4 Stars</a>
-                                <a class="dropdown-item" >5 Stars</a>
-                            </div>
-                        </div> -->
                         </select>
                         <br>
                         <br>
@@ -50,12 +38,17 @@
                             <button class="remove-recipe btn btn-warning" data-toggle="button" aria-pressed="false">Remove Selected Recipe</button>
                             <button class="remove-all btn btn-danger" data-toggle="button" aria-pressed="false">Remove All Recipes</button>
                         </div>
-                      <br>  
-                      </section>
-              
+                        <br>  
+                    </section>
+                    
                     <ul class="recipe-list" id = 'list'></ul>
+                </div>
+            <div id='footer'>
+                <a>For More Recipes Try The Following Sites!</a>
+                <a href= "https://www.allrecipes.com/">All Recipes</a>
+                <a href= "https://www.seriouseats.com/">Serious Eats</a>
+                <a href= "https://cooking.nytimes.com/">NY Times</a>
             </div>
-            <div id='footer'></div>
         <script src="./main.js"></script>
         <script src="./recipes.js"></script>
         <script src="./add-recipe.js"></script>
