some code clean up

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 </div>
             <div id='footer'>
                 <a>For More Recipes Try The Following Sites!</a>
-                <a href= "https://www.allrecipes.com/">All Recipes</a>
-                <a href= "https://www.seriouseats.com/">Serious Eats</a>
-                <a href= "https://cooking.nytimes.com/">NY Times</a>
+                <a target= '_blank' href= "https://www.allrecipes.com/">All Recipes</a>
+                <a target= '_blank' href= "https://www.seriouseats.com/">Serious Eats</a>
+                <a target= '_blank' href= "https://cooking.nytimes.com/">NY Times</a>
             </div>
         <script src="./main.js"></script>
         <script src="./recipes.js"></script>
